--- a/resources/sass/admin.scss
+++ b/resources/sass/admin.scss
@@ -6,4 +6,8 @@
 @import "files/sweetalert.css";
 @import "files/sb-admin-2.min.css";
 @import "files/Chart.min.css";
+@import "files/lib/slick/slick";
+@import "files/lib/slick/slick-theme.css";
+@import "files/lib/slick/slick-theme";
+@import "files/style.css";
 @import "files/custom-style.css";
